--- a/splitty/pubspec.yaml
+++ b/splitty/pubspec.yaml
@@ -12,6 +12,15 @@ dependencies:
     sdk: flutter
 
   flutter_native_splash: ^2.2.8
+  pinput: ^2.2.12
+  flutter_riverpod: ^2.0.0-dev.9
+  cached_network_image: ^3.2.1
+  intl_phone_field: ^3.1.0
+  url_launcher: ^6.1.4
+
+  firebase_core: ^1.21.1
+  firebase_auth: ^3.7.0
+  cloud_firestore: ^3.4.6
 
 dev_dependencies:
   flutter_test:
@@ -40,7 +49,6 @@ flutter:
     - family: outfit
       fonts:
         - asset: assets/fonts/outfit/Outfit-Regular.ttf
-          weight: 400
         - asset: assets/fonts/outfit/Outfit-Medium.ttf
           weight: 500
         - asset: assets/fonts/outfit/Outfit-SemiBold.ttf
